--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
 body {
-  font-family: "Yu Gothic UI Light"
+    font-family: "Yu Gothic UI Light";
+    height: 100%;
+    margin: 0;
+    width: 100%;
 }
