--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Yu Gothic UI Light";
+    font-family: "Century Gothic", sans-serif;
     height: 100%;
     margin: 0;
     width: 100%;
