--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Century Gothic", sans-serif;
+    font-family: Futura, 'Century Gothic', YuGothic, 'Hiragino Kaku Gothic ProN', 'Yu Gothic', Meiryo, sans-serif;
     height: 100%;
     margin: 0;
     width: 100%;
