--- a/style/style.css
+++ b/style/style.css
@@ -11,5 +11,14 @@ body {
 
 #headline1 {
     font-size: 72px;
-    padding: 10% 0%;
+    padding: 10% 4% 0%;
+}
+
+#headline2 {
+    font-size: 36px;
+    padding: 2%;
+}
+
+#headline3 {
+    font-size: 24px;
 }
