--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -6,12 +6,13 @@ body {
 }
 
 #headline {
+    margin: 0 auto;
     text-align: center;
 }
 
 #headline1 {
     font-size: 72px;
-    padding: 10% 4% 0%;
+    padding: 10% 4% 0;
 }
 
 #headline2 {
