--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -2,21 +2,24 @@ body {
     font-family: 'Yu Gothic', sans-serif;
     height: 100%;
     margin: 0;
+    position: relative;
     width: 100%;
 }
 
 #headline {
+    margin: auto;
+    position: absolute;
     text-align: center;
 }
 
 #headline1 {
     font-size: 72px;
-    padding: 20% 4% 0;
+    padding: 4% 0;
 }
 
 #headline2 {
     font-size: 36px;
-    padding: 2%;
+    padding: 4%;
 }
 
 #headline3 {
