--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Yu Gothic', sans-serif;
+    font-family: YuGothic, 'Yu Gothic', sans-serif;
     height: 100%;
     margin: 0;
     width: 100%;
