--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -7,7 +7,7 @@ body {
 
 #headline {
     background-attachment: fixed;
-    background-image: url("../../images/bookshelf.png");
+    background-image: url("../../image/bookshelf.png");
     text-align: center;
 }
 
