--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -8,7 +8,9 @@ body {
 #headline {
     background-attachment: fixed;
     background-image: url("../../image/bookshelf.png");
+    height: 100%;
     text-align: center;
+    width: 100%;
 }
 
 #headline1 {
