--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -11,6 +11,22 @@ body {
     width: 100%;
 }
 
+header {
+    background-color: #aee6f4;
+    height: 60px;
+    margin: 0px;
+    padding: 0%;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+}
+
+header #logo {
+    float: left;
+    height: 60px;
+    padding: 10px 24px;
+}
+
 #headline {
     text-align: center;
 }
