--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -36,7 +36,8 @@ header #logo {
     border-bottom: 2px solid #3581d7;
     border-top: 12px double #aee6f4;
     font-size: 72px;
-    padding: 200px 24px 0;
+    margin: 60px;
+    padding: 140px 24px 0;
 }
 
 #headline2 {
