--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -36,8 +36,8 @@ header #logo {
     border-bottom: 2px solid #3581d7;
     border-top: 12px double #aee6f4;
     font-size: 72px;
-    margin: 72px;
-    padding: 140px 24px 0;
+    padding: 180px 24px 0;
+    top: 60px;
 }
 
 #headline2 {
