--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -28,21 +28,25 @@ header #logo {
     padding: 10px 24px;
 }
 
+#header-bottom {
+    background-color: #aee6f4;
+    height: 4px;
+    width: 100%;
+}
+
 #headline {
-    position: absolute;
     text-align: center;
-    top: 60px;
 }
 
 #headline1 {
     border-bottom: 2px solid #3581d7;
-    border-top: 12px double #aee6f4;
     font-size: 72px;
-    padding: 180px 24px 0;
+    padding: 200px 24px 0;
 }
 
 #headline2 {
     font-size: 40px;
+    padding: 24px 0;
 }
 
 #headline3 {
