--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -31,8 +31,8 @@ header #logo {
 #header-bottom {
     background-color: #aee6f4;
     height: 4px;
-    margin: 4px;
     position: fixed;
+    top: 64px;
     width: 100%;
     z-index: 100;
 }
