--- a/style/pc/style.css
+++ b/style/pc/style.css
@@ -14,10 +14,10 @@ body {
 header {
     background-color: #aee6f4;
     height: 60px;
-    margin: 0px;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     position: fixed;
-    top: 0px;
+    top: 0;
     width: 100%;
     z-index: 100
 }
@@ -32,7 +32,7 @@ header #logo {
     background-color: #aee6f4;
     height: 4px;
     position: fixed;
-    top: 64px;
+    top: 120px;
     width: 100%;
     z-index: 100;
 }
