--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ body {
 
 header {
     background-color: #aee6f4;
-    height: 60px;
+    height: 10vh;
     margin: 0;
     padding: 0;
     position: fixed;
@@ -24,15 +24,15 @@ header {
 
 header #logo {
     float: left;
-    height: 60px;
-    padding: 10px 24px;
+    height: 10vh;
+    padding: 0.8vh 2vw;
 }
 
 #header-bottom {
     background-color: #aee6f4;
     height: 4px;
     position: fixed;
-    top: 64px;
+    top: 11vh;
     width: 100%;
     z-index: 101;
 }
@@ -44,12 +44,12 @@ header #logo {
 #headline1 {
     border-bottom: 2px solid #3581d7;
     font-size: 80px;
-    padding: 200px 24px 0;
+    padding: 40vh 2vh 0;
 }
 
 #headline2 {
     font-size: 36px;
-    padding: 24px 0;
+    padding: 2vh 0;
 }
 
 #headline3 {
