--- a/style/style.css
+++ b/style/style.css
@@ -43,15 +43,15 @@ header #logo {
 
 #headline1 {
     border-bottom: 2px solid #3581d7;
-    font-size: 80px;
+    font-size: clamp(48px, 72px, 80px);
     padding: 32vh 2vh 0;
 }
 
 #headline2 {
-    font-size: 36px;
+    font-size: clamp(24px, 30px, 36px);
     padding: 2vh 0;
 }
 
 #headline3 {
-    font-size: 24px;
+    font-size: clamp(16px, 22px, 24px);
 }
