--- a/style/style.css
+++ b/style/style.css
@@ -43,15 +43,15 @@ header #logo {
 
 #headline1 {
     border-bottom: 2px solid #3581d7;
-    font-size: clamp(36px, 72px, 80px);
+    font-size: clamp(2.2rem, 4.5rem, 5rem);
     padding: 32vh 2vh 0;
 }
 
 #headline2 {
-    font-size: clamp(24px, 30px, 36px);
+    font-size: clamp(1.5rem, 2rem, 2.2rem);
     padding: 2vh 0;
 }
 
 #headline3 {
-    font-size: clamp(12px, 20px, 24px);
+    font-size: clamp(0.8rem, 1.2rem, 1.5rem);
 }
