--- a/style/style.css
+++ b/style/style.css
@@ -15,15 +15,20 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    box-sizing: border-box;
     font-family: YuGothic, 'Yu Gothic', sans-serif;
     height: 100%;
     margin: 0;
+    padding: 0;
     width: 100%;
 }
 
 header {
+    align-items: center;
     background-color: #aee6f4;
+    display: flex;
     height: 10vh;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
     position: fixed;
@@ -35,7 +40,6 @@ header {
 header #logo {
     float: left;
     height: 10vh;
-    padding: 0.8vh 2vw;
 }
 
 #header-bottom {
