--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@ body {
     box-sizing: border-box;
     font-family: YuGothic, 'Yu Gothic', sans-serif;
     height: 100%;
+    list-style: none;
     margin: 0;
     padding: 0;
     width: 100%;
@@ -40,6 +41,18 @@ header {
 header #logo {
     float: left;
     height: 10vh;
+}
+
+header .navigation-list {
+    display: flex;
+}
+
+header .navigation-list li {
+    margin: 0 0.8rem 0 0;
+}
+
+header .navigation-link {
+    font-size: 2rem;
 }
 
 #header-bottom {
