--- a/style/style.css
+++ b/style/style.css
@@ -50,7 +50,8 @@ header .navigation-list {
 }
 
 header .navigation-list li {
-    margin: 0 2rem 0 0;
+    margin: 0 1rem 0 0;
+    padding: 0 1rem 0 0;
 }
 
 header .navigation-link {
