--- a/style/style.css
+++ b/style/style.css
@@ -2,9 +2,41 @@ html {
     font-size: 16px;
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     html {
         font-size: 10px;
+    }
+
+    header {
+        position: relative;
+    }
+
+    header .responsive-button {
+        display: flex;
+    }
+    
+    header .navigation {
+        background: linear-gradient(cyan, 80%, blue);
+        height: 100vh;
+        padding: 10vh 0 0 0;
+        position: fixed;
+        right: -100%;
+        top: 0;
+        transition: 0.5s;
+        width: 100%;
+    }
+
+    header .navigation-list {
+        display: block;
+        text-align: center;
+    }
+
+    header .navigation-list li {
+        text-align: center;
+    }
+
+    header .navigation-link {
+        font-size: 1.5rem;
     }
 }
 
@@ -43,6 +75,26 @@ header #logo {
     height: 10vh;
 }
 
+header .responsive-button {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin: 0 2rem 0 0;
+    cursor: pointer;
+    position: relative;
+    z-index: 102;
+}
+
+.menu-line {
+    background-color: #000000;
+    width: 100%;
+    height: 0.3rem;
+    margin: 0.1rem 0;
+}
+
 header .navigation-list {
     display: flex;
     list-style: none;
@@ -50,13 +102,12 @@ header .navigation-list {
 }
 
 header .navigation-list li {
-    margin: 0 1rem 0 0;
-    padding: 0 1rem 0 0;
+    margin: 0 2rem 0 0;
 }
 
 header .navigation-link {
     color: #000000;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     text-decoration: none;
 }
 
