--- a/style/style.css
+++ b/style/style.css
@@ -88,11 +88,15 @@ header .responsive-button {
     z-index: 102;
 }
 
-.menu-line {
+header .menu-line {
     background-color: #000000;
     width: 100%;
     height: 0.3rem;
     margin: 0.1rem 0;
+}
+
+.menu-active {
+    right: 0;
 }
 
 header .navigation-list {
