--- a/style/style.css
+++ b/style/style.css
@@ -90,6 +90,7 @@ header .responsive-button {
 
 header .menu-line {
     background-color: #000000;
+    border-radius: 0.3rem;
     width: 100%;
     height: 0.3rem;
     margin: 0.1rem 0;
