--- a/style/style.css
+++ b/style/style.css
@@ -7,33 +7,9 @@ html {
         font-size: 10px;
     }
 
-    header .responsive-button {
-        display: flex;
-        position: absolute;
-    }
-    
-    header .navigation {
-        background: linear-gradient(cyan, 80%, blue);
-        height: 100vh;
-        padding: 10vh 0 0 0;
-        position: fixed;
-        right: -100%;
-        top: 0;
-        transition: 0.5s;
-        width: 100%;
-    }
-
-    header .navigation-list {
-        display: block;
-        text-align: center;
-    }
-
-    header .navigation-list li {
-        text-align: center;
-    }
-
-    header .navigation-link {
-        font-size: 1.5rem;
+    header #logo {
+        padding: 0.8rem 6rem;
+        height: 7.2vh;
     }
 }
 
