--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,57 @@ html {
     html {
         font-size: 10px;
     }
+
+    header {
+        position: relative;
+    }
+
+    header .hamburger-list {
+        background-color: linear-gradient(#aee6f4 60%, #5f74da);
+        align-items: flex-start;
+        display: flex;
+        flex-direction: column;
+        left: 0;
+        padding: 2rem;
+        position: absolute;
+        transform: translateX(-100%);
+        transition: 0.5s;
+        top: 100%;
+        width: 100%;
+    }
+
+    header #hamburger:checked ~ .hamburger-list {
+        transform: translateX(0%);
+        transition: 0.5s;
+    }
+
+    header .hamburger-button {
+        align-items: center;
+        appearance: none;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        height: 1.4rem;
+        justify-content: center;
+        width: 2rem;
+    }
+
+    header #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(1) {
+        transform: translate(2px, 1px) rotate(45deg);
+        transform-origin: 0%;
+    }
+    
+    header #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(2) {
+        opacity: 0;
+    }
+  
+    header #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(3) {
+        transform: translate(2px, 3px) rotate(-45deg);
+        transform-origin: 0%;
+    }
 }
 
 body {
@@ -43,6 +94,27 @@ header #logo {
     height: 10vh;
 }
 
+header .hamburger-input {
+    display: none;
+}
+
+header .hamburger-bg {
+    background-color: #000000;
+    cursor: pointer;
+    display: none;
+    height: 100vh;
+    left: 0;
+    opacity: 0.4;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+header #hamburger:checked ~ .hamburger-bg {
+    display: block;
+}
+
 header .header-list {
     box-sizing: border-box;
     display: flex;
@@ -63,7 +135,19 @@ header .header-list-link {
 }
 
 header .header-list-link:hover {
-  filter: opacity(0.6);
+    filter: opacity(0.6);
+}
+
+header .hamburger-button {
+    display: none;
+}
+
+header .hamburger-button-mark {
+    background-color: #000000;
+    display: block;
+    height: 0.2rem;
+    transition: 0.5s;
+    width: 2rem;
 }
 
 #header-bottom {
