--- a/style/style.css
+++ b/style/style.css
@@ -11,11 +11,11 @@ html {
         position: relative;
     }
 
-    header .hamburger-bg {
+    .hamburger-bg {
         z-index: 102;
     }
 
-    header .hamburger-list {
+    .hamburger-list {
         background-color: linear-gradient(#aee6f4 60%, #5f74da);
         align-items: flex-start;
         display: flex;
@@ -29,12 +29,12 @@ html {
         width: 100%;
     }
 
-    header #hamburger:checked ~ .hamburger-list {
+    #hamburger:checked ~ .hamburger-list {
         transform: translateX(0%);
         transition: 0.5s;
     }
 
-    header .hamburger-button {
+    .hamburger-button {
         align-items: center;
         appearance: none;
         background-color: transparent;
@@ -48,16 +48,16 @@ html {
         width: 2rem;
     }
 
-    header #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(1) {
+    #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(1) {
         transform: translate(2px, 1px) rotate(45deg);
         transform-origin: 0%;
     }
     
-    header #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(2) {
+    #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(2) {
         opacity: 0;
     }
   
-    header #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(3) {
+    #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(3) {
         transform: translate(2px, 3px) rotate(-45deg);
         transform-origin: 0%;
     }
@@ -92,17 +92,17 @@ header {
     z-index: 100;
 }
 
-header #logo {
+#logo {
     float: left;
     padding: 0.8rem 2rem;
     height: 10vh;
 }
 
-header .hamburger-input {
+.hamburger-input {
     display: none;
 }
 
-header .hamburger-bg {
+.hamburger-bg {
     background-color: #000000;
     cursor: pointer;
     display: none;
@@ -115,38 +115,38 @@ header .hamburger-bg {
     z-index: -1;
 }
 
-header #hamburger:checked ~ .hamburger-bg {
+#hamburger:checked ~ .hamburger-bg {
     display: block;
 }
 
-header .header-list {
+.header-list {
     box-sizing: border-box;
     display: flex;
     margin: 0;
     padding: 0;
 }
 
-header .header-list-item {
+.header-list-item {
     list-style: none;
     text-decoration: none;
 }
 
-header .header-list-link {
+.header-list-link {
     color: #000000;
     display: block;
     margin: 0 2rem 0 0;
     text-decoration: none;
 }
 
-header .header-list-link:hover {
+.header-list-link:hover {
     filter: opacity(0.6);
 }
 
-header .hamburger-button {
+.hamburger-button {
     display: none;
 }
 
-header .hamburger-button-mark {
+.hamburger-button-mark {
     background-color: #000000;
     display: block;
     height: 0.2rem;
