--- a/style/style.css
+++ b/style/style.css
@@ -156,22 +156,14 @@ header {
         height: 1.4rem;
         justify-content: center;
         right: 1rem;
-        margin: 1rem;
-        position: absolute;
+        margin: 2.4rem 1rem;
+        position: fixed;
         width: 2.4rem;
         z-index: 102;
     }
 
-    #mark1 {
-        margin: 0.2rem 0.1rem 0;
-    }
-
-    #mark2 {
-        margin: 0.1rem 0;
-    }
-
-    #mark3 {
-        margin: 0.1rem 0.2rem 0;
+    .hamburger-button-mark {
+        margin: 0.2rem;
     }
 
     #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(1) {
