--- a/style/style.css
+++ b/style/style.css
@@ -127,6 +127,7 @@ header {
 
     .hamburger-list {
         align-items: flex-start;
+        background-color: linear-gradient(#aee6f4 60%, #5f74da);
         display: flex;
         flex-direction: column;
         left: 0;
@@ -165,7 +166,7 @@ header {
     }
 
     #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(1) {
-        transform: translate(2px, 1px) rotate(45deg);
+        transform: translate(3px, 2px) rotate(45deg);
         transform-origin: 0%;
     }
     
@@ -174,7 +175,7 @@ header {
     }
   
     #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(3) {
-        transform: translate(2px, 3px) rotate(-45deg);
+        transform: translate(3px, 4px) rotate(-45deg);
         transform-origin: 0%;
     }
 }
