--- a/style/style.css
+++ b/style/style.css
@@ -162,11 +162,12 @@ header {
     }
 
     .hamburger-button-mark {
+        height: 0.2rem;
         margin: 0.2rem;
     }
 
     #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(1) {
-        transform: translate(3px, 2px) rotate(45deg);
+        transform: translate(0.2rem, 0.1rem) rotate(45deg);
         transform-origin: 0%;
     }
     
@@ -175,7 +176,7 @@ header {
     }
   
     #hamburger:checked ~ .hamburger-button .hamburger-button-mark:nth-of-type(3) {
-        transform: translate(3px, 4px) rotate(-45deg);
+        transform: translate(0.2rem, 0.3rem) rotate(-45deg);
         transform-origin: 0%;
     }
 }
